Config format project